--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>React Playground</title>
 </head>
 
-<body>
+<body className="min-h-screen bg-cloud flex justify-center items-start py-6 sm:py-10 font-sans">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
