chore: clean up, minor refactoring for preventing duplications

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fruit Manager 🥝</title>
+  <meta name="description" content="Tiny React + TS app to add, filter and select fruits.">
   <title>React Playground</title>
 </head>
 
-<body className="min-h-screen bg-cloud flex justify-center items-start py-6 sm:py-10 font-sans">
-  <div id="root"></div>
+<body class="min-h-screen bg-cloud flex justify-center items-start py-6 sm:py-10 font-sans">
+  <div id="root" class="max-w-xl w-full mx-auto px-4"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
